Final responsive commit. Switching to desktop only verson.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,43 @@
   </head>
   <body>
   	<div class="container">
-		<div id="stageShade"></div>
-		<div id="headerContainer"></div>
-		<div id="featureOneContainer"><img src="images/homepage/genesis-feature-one-640x450.jpg"></div>
+		<!-- <div id="stageShade"></div> -->
+		<div id="headerContainer">
+			<div id="headerContent">
+				<img src="images/logos/headerCopyMobile.png" id="headerCopy" />
+				<img src="images/logos/hyundai-logo-131x24.png" id="headerLogo" />
+			</div>
+			<!-- <video src="video/032912_Sonata_720x405.mp4" controls autoplay width="100%"></video> -->
+		</div>
+		<div id="rowOne">
+			<img src="images/homepage/genesis-feature-one-640x450.jpg">
+		</div>
+		<div id="getUpdates">
+			<p class="textBlockTitle bronze trGoth21">BE THE FIRST TO KNOW WHAT'S NEXT</p>
+			<p class="medGray trGoth16">GET ON THE GENESIS UPDATES LIST</p>
+			<button class="getUpdatesBtn white trGoth16bold">GET UPDATES</button>
+		</div>
+		<hr />
+		<div id="rowTwo">
+			<div id="rowTwoHeroImage">
+				<img src="images/homepage/row-two-background-640x723.png" id="rowTwoHero" />
+			</div>
+			<div id="rowTwoHeaderCopy">
+				<p class="textBlockTitle bronze trGoth30">JANUARY 13, 2014</p>
+				<p class="medGray trGoth16bold">11AM CENTRAL | DETROIT, MI</p>
+				<hr class="short" />
+				<img src="images/logos/detroit-auto-show-logo-215x45.png" id="detroitLogo" />
+			</div>
+			<div id="rowTwoCopy">
+				
+				<!-- <p class="textBlockTitle bronze trGoth21">SED DIAM ADIPASCING CONSECTETEUR</p> -->
+			</div>
+			
+		</div>
   	</div>
   </body>
 </html>
+
+<!-- <video id="hyundai-video" class="video-js vjs-default-skin" controls width="100%" data-setup='{"controls":true}'>
+				<source src="video/032912_Sonata_720x405.mp4" type='video/mp4' />
+			</video> -->
